--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
 GlobalDefaultGameMode=/Game/Blueprints/VRGameMode.VRGameMode_C
-EditorStartupMap=/Game/Levels/TestingLevel.TestingLevel
+EditorStartupMap=/Game/Levels/Level-Tutorial.Level-Tutorial
 GameDefaultMap=/Game/Levels/MainMenu.MainMenu
 
 [/Script/Engine.RendererSettings]
