--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,5 +1,5 @@
 [/Script/EngineSettings.GameMapsSettings]
-GlobalDefaultGameMode=/Game/Blueprints/VRGameMode.VRGameMode_C
+GlobalDefaultGameMode=/Game/Blueprints/Gamemodes/VRGameMode.VRGameMode_C
 EditorStartupMap=/Game/Levels/Level-Tutorial.Level-Tutorial
 GameDefaultMap=/Game/Levels/MainMenu.MainMenu
 
@@ -47,7 +47,7 @@ DefaultGraphicsRHI=DefaultGraphicsRHI_Default
 +D3D12TargetedShaderFormats=PCD3D_SM6
 -D3D11TargetedShaderFormats=PCD3D_SM5
 +D3D11TargetedShaderFormats=PCD3D_SM5
-Compiler=Default
+Compiler=VisualStudio2022
 AudioSampleRate=48000
 AudioCallbackBufferFrameSize=1024
 AudioNumBuffersToEnqueue=1
